--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* the following styliing was provided by Frontend Mentor */
 .attribution { 
     font-size: 11px; text-align: center; 
 }
@@ -5,3 +6,5 @@
 .attribution a { 
     color: hsl(228, 45%, 44%); 
 }
+
+/* all styling below this coment was done by Kari Puzzonia */
