--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,17 @@
 }
 
 /* all styling below this coment was done by Kari Puzzonia */
+body {
+    background-color: hsl(47, 88%, 63%);
+}
+
+.blog-card {
+    background-color: hsl(0, 0%, 100%);
+    margin: auto;
+    padding: 15px;
+}
+
+
+.blog-card .emphasis {
+    font-weight: bold;
+}
