Updates to styling

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,8 @@ body {
 
 .blog-card {
     background-color: hsl(0, 0%, 100%);
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     padding: 24px;
     max-height: 522px;
     min-height: 327px;
@@ -26,11 +27,9 @@ body {
     border-radius: 20px;
     border: solid 1px hsl(0, 0%, 7%);
     box-shadow: 8px 8px black;
+    font-family: 'Figtree', sans-serif;
 }
 
-.blog-card .emphasis {
-    font-weight: bold;
-}
 
 figure img {
     border-radius: 10px;
@@ -40,6 +39,7 @@ header .topic {
     background-color:hsl(47, 88%, 63%);
     border-radius: 4px;
     padding: 4px 12px;
+    font-weight: 800;
 }
 
 .title a {
@@ -49,4 +49,13 @@ header .topic {
 
 .title a:hover {
     color:hsl(47, 88%, 63%);
+}
+
+.summary {
+    font-size: 16px;
+    color: hsl(0, 0%, 42%);
+}
+
+footer p {
+    font-weight: 800;
 }
