--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,8 @@ body {
     background-color: hsl(0, 0%, 100%);
     margin-left: auto;
     margin-right: auto;
-    padding: 24px;
-    height: 502px;
-    width: 334px;
+    height: 522px;
+    width: 384px;
     display: flex;
     flex-direction: column;
     border-radius: 20px;
@@ -29,14 +28,22 @@ body {
     font-family: 'Figtree', sans-serif;
 }
 
-figure {
-    margin: 0px;
-}
-
 .main-image {
+    margin-top: 24px;
+    margin-left: 24px;
     height: 200px;
     width: 336px;
+}
+
+.main-image img {
     border-radius: 10px;
+}
+
+header {
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 header .topic {
@@ -44,6 +51,16 @@ header .topic {
     border-radius: 4px;
     padding: 4px 12px;
     font-weight: 800;
+}
+
+header time {
+    color: hsl(0, 0%, 7%);
+}
+
+.summary-content {
+    margin: 0 24px;
+    font-size: 16px;
+    color: hsl(0, 0%, 42%);
 }
 
 .title a {
@@ -55,17 +72,18 @@ header .topic {
     color:hsl(47, 88%, 63%);
 }
 
-.summary {
-    font-size: 16px;
-    color: hsl(0, 0%, 42%);
+footer {
+    margin: 0 24px;
 }
-
 
 footer p {
     font-weight: 800;
+    margin-top: 18px;
 }
 
 .profile-pic {
+    height: 32px;
+    width: 32px;
     vertical-align: middle;
 }
 
