--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,10 @@
 
 /* all styling below this coment was done by Kari Puzzonia */
 
-body {
+body,
+header .topic {
     background-color: hsl(47, 88%, 63%);
+    font-family: 'Figtree', sans-serif;
 }
 
 .blog-card {
@@ -25,12 +27,10 @@ body {
     border-radius: 20px;
     border: solid 1px hsl(0, 0%, 7%);
     box-shadow: 8px 8px black;
-    font-family: 'Figtree', sans-serif;
 }
 
 .main-image {
-    margin-top: 24px;
-    margin-left: 24px;
+    margin: 24px;
     height: 200px;
     width: 336px;
 }
@@ -40,25 +40,29 @@ body {
 }
 
 header {
-    margin-left: 24px;
-    margin-right: 24px;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0px 24px;
+}
+
+header .topic, 
+footer p {
+    font-weight: 800;
 }
 
 header .topic {
-    background-color:hsl(47, 88%, 63%);
     border-radius: 4px;
     padding: 4px 12px;
-    font-weight: 800;
 }
 
 header time {
     color: hsl(0, 0%, 7%);
 }
 
-.summary-content {
+.summary-content,
+footer {
     margin: 0 24px;
+}
+
+.summary-content {
     font-size: 16px;
     color: hsl(0, 0%, 42%);
 }
@@ -72,22 +76,20 @@ header time {
     color:hsl(47, 88%, 63%);
 }
 
-footer {
-    margin: 0 24px;
+footer p {
+    margin-top: 18px;
 }
 
-footer p {
-    font-weight: 800;
-    margin-top: 18px;
+.profile-pic,
+.name {
+    vertical-align: middle;
 }
 
 .profile-pic {
     height: 32px;
     width: 32px;
-    vertical-align: middle;
 }
 
 .name {
-    vertical-align: middle;
     padding-left: 8px;
 }
